Add links section with project and GitHub profile

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
             <li> Python Programming, Cybersecurity and Networking, musculoskeletal systems</li>
         </ul>
     </div>
-
+    <div class="section">
+        <h2>Links</h2>
+    <ul>
+        <li><a href="Projects.html">My Projectd</a>a></li>
+    </ul>
+    </div>
     <div class="section">
         <h2>Links</h2>
         <ul>
