Fix typo in project link text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="section">
         <h2>Links</h2>
     <ul>
-        <li><a href="Projects.html">My Projectd</a>a></li>
+        <li><a href="Projects.html">My Projects</a></li>
     </ul>
     </div>
     <div class="section">
